feat: :iphone: fixed responsive design, sliders, font sizes, carousels, etc

--- a/src/components/Home/OurServices/OurServices.module.css
+++ b/src/components/Home/OurServices/OurServices.module.css
@@ -3,3 +3,10 @@
   width: 50%;
   margin-top: -.6rem;
 }
+
+
+@media screen and (max-width: 576px) {
+  .heading h3 {
+    width: fit-content;
+  }
+}
