--- a/src/components/Portfolio/HeroPortfolio/index.module.css
+++ b/src/components/Portfolio/HeroPortfolio/index.module.css
@@ -27,4 +27,12 @@
     width: 100%;
     height: auto;
   }
+
+  .heading h3,
+  .heading p {
+    width: 100% !important;
+  }
+  .image {
+    margin-top: 3rem;
+  }
 }
