--- a/src/libs/Button/Button.module.css
+++ b/src/libs/Button/Button.module.css
@@ -48,3 +48,10 @@
   display: flex;
   align-items: center;
 }
+
+
+@media screen and (max-width: 576px) {
+  .container {
+    font-size: 12px;
+  }
+}
