--- a/src/libs/Card/Card.module.css
+++ b/src/libs/Card/Card.module.css
@@ -29,3 +29,13 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 576px) {
+  .container {
+    margin-left: 3rem;
+  }
+
+  .align-center {
+    margin-left: 0 !important;
+  }
+}
