--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,13 +2,21 @@
   background-color: #000;
 }
 
-.services p {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  color: #667790;
-  margin-bottom: -0.2rem;
+.services a {
+  all: unset !important;
+  font-weight: 700 !important;
+  font-size: 14px !important; 
+  line-height: 16px !important;
+  color: #667790 !important;
+  cursor: pointer !important;
+  margin-bottom: 1.4rem !important;
 }
+
+.services  {
+  display: flex;
+  flex-direction: column;
+}
+
 
 .services > li {
   /* margin-bottom: .5rem !important; */
