--- a/src/pages/Contact/index.module.css
+++ b/src/pages/Contact/index.module.css
@@ -63,5 +63,19 @@
 @media screen and (max-width: 768px) {
   .form {
     padding-left: 0 !important;
+    margin-top: 2rem !important;
+    border-left: none;
+  }
+  .contact {
+    margin: 2rem 4rem !important;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .contact {
+    margin: 2rem !important;
+    background-color: #edf7f7;
+    border-radius: 48px;
+    padding: 2rem 1rem;
   }
 }
