--- a/src/components/Home/ServiceArea/index.module.css
+++ b/src/components/Home/ServiceArea/index.module.css
@@ -2,3 +2,11 @@
   width: 100%;
   height: auto;
 }
+
+
+@media screen and (max-width: 576px) {
+  .heading h3 {
+    width: 100% !important; 
+    margin-bottom: 1.4rem;
+  }
+}
