--- a/src/components/About/HeroAbout/index.module.css
+++ b/src/components/About/HeroAbout/index.module.css
@@ -1,10 +1,16 @@
 .heading h3 {
-    margin-top: -1rem;
-    width: 75%;
+  margin-top: -1rem;
+  width: 75%;
 }
 
 .banner img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 450px) {
+  .heading h3 {
     width: 100%;
-    height: auto;
-    object-fit: cover;
+  }
 }
