--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,18 +5,17 @@
 .services a {
   all: unset !important;
   font-weight: 700 !important;
-  font-size: 14px !important; 
+  font-size: 14px !important;
   line-height: 16px !important;
   color: #667790 !important;
   cursor: pointer !important;
   margin-bottom: 1.4rem !important;
 }
 
-.services  {
+.services {
   display: flex;
   flex-direction: column;
 }
-
 
 .services > li {
   /* margin-bottom: .5rem !important; */
@@ -66,6 +65,28 @@
   font-weight: 700;
   font-size: 14px;
   border: none;
+}
+
+.datepicker {
+  width: auto;
+  margin: 1em auto;
+  padding: 1em;
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #f0f0f0;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 12px;
+  box-shadow: 0 2px 4px #00000018;
+  bottom: -70px;
+  right: 22vw;
+}
+
+@media (max-width: 520px) {
+  .datepicker {
+    width: 100%;
+    right: 0;
+  }
 }
 
 @media screen and (max-width: 768px) {
