fixed response feed backs

--- a/src/components/Newsletter/index.module.css
+++ b/src/components/Newsletter/index.module.css
@@ -42,6 +42,11 @@
   justify-content: center;
 }
 
+.input button:disabled {
+  pointer-events: none;
+  opacity: 0.65;
+}
+
 
 @media screen and (max-width: 391px) {
 
